--- a/parcel/parcel/styles/index.scss
+++ b/parcel/parcel/styles/index.scss
@@ -1,3 +1,13 @@
 // here you can import other scss files
 @import 'global.scss';
 @import 'header.scss';
+@import 'section.scss';
+@import 'brands.scss';
+@import 'photo__section.scss';
+@import 'apps.scss';
+@import 'localization.scss';
+@import 'men.scss';
+@import 'footer.scss';
+@import 'cake.scss';
+@import 'bird.scss';
+@import 'free.scss';
