--- a/parcel/parcel/styles/header.scss
+++ b/parcel/parcel/styles/header.scss
@@ -1,3 +1,36 @@
 .header {
-    display: flex;
+    padding: 25px 0 25px 0;
+
+    &__nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__list {
+        display: flex;
+        gap: 42px;
+    }
+
+    &__list--mod {
+        margin: 0 15px 0 15px;
+    }
+
+    &__link {
+        font-style: normal;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 20px;
+    }
+
+    &__left__menu {
+        display: flex;
+        align-items: center;
+        gap: 51px;
+    }
+
+    &__right__menu {
+        display: flex;
+        gap: 10px;
+    }
 }
