--- a/parcel/parcel/styles/apps.scss
+++ b/parcel/parcel/styles/apps.scss
@@ -7,9 +7,26 @@
         font-weight: 600;
         line-height: 60px;
         text-align: center;
+        margin-bottom: 58px;
     }
 
-    &__wraper__up {
+    &__wraper {
+        display: flex;
+        gap: 57px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    &__article {
+        max-width: 330px;
+        max-height: 294px;
+        flex-shrink: 0;
+        text-align: center;
+    }
+
+
+
+    /* &__wraper__up {
         display: flex;
         gap: 110px;
         margin: 58px 0 58px 0;
@@ -18,17 +35,19 @@
     &__wraper__down {
         display: flex;
         gap: 110px;
-    }
+    } */
 
     &__article__title {
         font-size: 25px;
         font-weight: 600;
         line-height: 35px;
+
     }
 
     &__pharahraph {
         font-size: 18px;
         font-weight: 400;
         line-height: 25px;
+        margin: 26px 0 20px 0;
     }
 }
