--- a/parcel/parcel/styles/cake.scss
+++ b/parcel/parcel/styles/cake.scss
@@ -5,6 +5,7 @@
         display: flex;
         padding: 80px 0 80px 0;
         align-items: center;
+        justify-content: space-between;
     }
 
     &__img {
@@ -17,21 +18,50 @@
         font-size: 35px;
         font-weight: 600;
         line-height: 50px;
-        margin: 0 125px 0 67px;
+
+        max-width: 460px;
     }
 
-    &__png {
+    &__svg-wraper-block {
+        display: flex;
+        border-left: 1px solid black;
+        padding: 40px 65px 20px 70px;
+        gap: 60px;
+
+    }
+
+    &__svg-wraper {
+        max-width: 128px;
+        max-height: 116px;
+        flex-shrink: 0;
+    }
+
+    &__svg-text {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 25px;
+        /* 166.667% */
+        letter-spacing: 0.75px;
+    }
+
+    &__svg-stars {
+        margin: 20px 0 14px 0;
+    }
+
+
+
+    /*  &__png {
         width: 128px;
         height: 116px;
         flex-shrink: 0;
     }
 
-    &__png__block {
+    &__png-block {
         display: flex;
         gap: 70px;
         padding-left: 71px;
         border-left: 1px solid black;
-    }
+    } */
 
 
 }
