--- a/parcel/parcel/styles/section.scss
+++ b/parcel/parcel/styles/section.scss
@@ -7,7 +7,7 @@
 
     }
 
-    &__title__block {
+    &__title-block {
         padding: 14px 0 35px;
         max-width: 620.016px;
         min-height: 610px;
@@ -43,7 +43,7 @@
         gap: 10px;
     }
 
-    &__img__block {
+    &__img-block {
         padding: 90px 0 35px 0;
         max-width: 759px;
         max-height: 529px;
@@ -52,9 +52,9 @@
     }
 
     &__img {
-        height: 130%;
-        width: 90%;
-
+        // max-height: 130%;
+        // max-width: 90%;
+        object-fit: contain;
     }
 
 }
