--- a/parcel/parcel/styles/footer.scss
+++ b/parcel/parcel/styles/footer.scss
@@ -1,58 +1,4 @@
-$desktop-xl: 1199px;
-$desktop-m: 991px;
-$tablet-l: 767px;
-$tablet-m: 575px;
-$font: sans-serif;
-
-@mixin desktop-xl {
-    @media (screen and max-width: $desktop-xl) {
-        @content;
-    }
-}
-
-@mixin desktop-m {
-    @media (screen and max-width: $desktop-m) {
-        @content;
-    }
-}
-
-@mixin tablet-l {
-    @media (screen and max-width: $tablet-l) {
-        @content;
-    }
-}
-
-@mixin tablet-m {
-    @media (screen and max-width: $tablet-m) {
-        @content;
-    }
-}
-
-@mixin paragraph-font {
-    font-size: 1.25rem;
-    line-height: 1.875rem;
-
-    @include desktop-m {
-        font-size: 15px;
-        line-height: 15px;
-    }
-
-    @include tablet-l {
-        font-size: 20px;
-        line-height: 30px;
-    }
-}
-
-
-html {
-    font-size: 16px;
-
-    @include tablet-l {
-        font-size: 18px;
-    }
-}
-
-
+@import 'mixin.scss';
 
 .footer {
     background: #eee;
