--- a/parcel/parcel/styles/bird.scss
+++ b/parcel/parcel/styles/bird.scss
@@ -6,29 +6,46 @@
         align-items: center;
         padding: 169px 0 162px 0;
 
+        @include desktop-m {
+            padding: 80px 0 80px 0;
+        }
+
     }
 
     &__title {
         max-width: 791px;
-        font-size: 65px;
+        font-size: 4.063rem;
         font-weight: 600;
-        line-height: 75px;
-        /* 115.385% */
+        line-height: 4.688rem;
+
+        @include desktop-m {
+            font-size: 2.03rem;
+            line-height: 2.344rem;
+            max-width: 380px;
+        }
     }
 
     &__text {
         max-width: 539px;
-        font-size: 25px;
+        font-size: 1.25rem;
         font-weight: 400;
-        line-height: 30px;
-        /* 120% */
+        line-height: 1.875rem;
+
+        @include desktop-m {
+            font-size: 1rem;
+            line-height: 1.1rem;
+            max-width: 420px;
+        }
+
     }
 
     &__img {
         max-width: 1023px;
+        width: 100%;
         max-height: 445px;
-        flex-shrink: 0;
+        // flex-shrink: 0;
         margin: 25px 0 32px 0;
+        object-fit: contain;
     }
 
 
