--- a/parcel/parcel/styles/cake.scss
+++ b/parcel/parcel/styles/cake.scss
@@ -6,6 +6,18 @@
         padding: 80px 0 80px 0;
         align-items: center;
         justify-content: space-between;
+        gap: 10px;
+
+        @include desktop-xl {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        @include desktop-m {
+            padding: 40px 0 40px 0;
+            flex-direction: column;
+            gap: 20px;
+        }
     }
 
     &__img {
@@ -15,11 +27,18 @@
     }
 
     &__title {
-        font-size: 35px;
+        font-size: 2.188rem;
         font-weight: 600;
-        line-height: 50px;
-
+        line-height: 3.125rem;
         max-width: 460px;
+
+
+        @include desktop-m {
+            font-size: 1.23rem;
+            line-height: 1.544rem;
+            max-width: 380px;
+            text-align: center;
+        }
     }
 
     &__svg-wraper-block {
@@ -27,6 +46,16 @@
         border-left: 1px solid black;
         padding: 40px 65px 20px 70px;
         gap: 60px;
+
+        @include desktop-m {
+            padding: 20px 32px 20px 35px;
+            gap: 40px;
+        }
+
+        @include tablet-l {
+            padding: 10px 12px 10px 15px;
+            gap: 20px;
+        }
 
     }
 
