--- a/parcel/parcel/styles/global.scss
+++ b/parcel/parcel/styles/global.scss
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+@import 'mixin.scss';
+
+html {
+    font-size: 16px;
+
+    @include tablet-l {
+        font-size: 18px;
+    }
+}
+
 body {
     margin: 0;
     font-family: sans-serif;
@@ -46,12 +56,12 @@ dl {
 
 .btn {
     background-color: transparent;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 600;
     border: 1px solid rgba(0, 0, 0, 0.50);
     padding: 0 36px;
-    line-height: 45px;
+    line-height: 2.813rem;
     text-align: center;
 
     &--color {
@@ -69,6 +79,12 @@ dl {
         background-color: black;
         font-size: 17px;
         color: white;
+    }
+
+    @include desktop-xl {
+        line-height: 2.3rem;
+        font-size: 0.75rem;
+        padding: 0 30px;
     }
 }
 
