--- a/parcel/parcel/styles/header.scss
+++ b/parcel/parcel/styles/header.scss
@@ -1,6 +1,11 @@
 .header {
     padding: 25px 0 25px 0;
 
+
+    @include desktop-m {
+        padding: 5px 0 5px 0;
+    }
+
     &__nav {
         display: flex;
         justify-content: space-between;
@@ -10,6 +15,14 @@
     &__list {
         display: flex;
         gap: 42px;
+
+        @include desktop-xl {
+            gap: 15px;
+        }
+
+        @include desktop-m {
+            display: none;
+        }
     }
 
     &__list--mod {
@@ -17,10 +30,14 @@
     }
 
     &__link {
-        font-style: normal;
-        font-size: 15px;
+        font-size: 0.938rem;
         font-weight: 400;
-        line-height: 20px;
+        line-height: 1.25rem;
+
+        @include desktop-xl {
+            font-size: 1.2rem;
+            line-height: 1.5rem;
+        }
     }
 
     &__left__menu {
@@ -32,5 +49,24 @@
     &__right__menu {
         display: flex;
         gap: 10px;
+    }
+}
+
+.btn--burger {
+    @include desktop-m {
+        display: none;
+    }
+}
+
+.hamburger {
+    display: none;
+    width: 100px;
+    height: 90px;
+    padding: 0 0 5px 10px;
+
+
+
+    @include desktop-m {
+        display: block;
     }
 }
