--- a/parcel/parcel/styles/men.scss
+++ b/parcel/parcel/styles/men.scss
@@ -5,24 +5,38 @@
     &__wraper {
         display: flex;
         gap: 60px;
+
+        @include desktop-m {
+            flex-direction: column;
+            gap: 30px;
+            align-items: center;
+        }
     }
 
-    &__img {
-        max-width: 310px;
-        max-height: 310px;
-        flex-shrink: 0;
+    &__img__block {
+        flex: 1;
+
+
+
+    }
+
+    &__text__block {
+        flex: 3;
     }
 
     &__text {
-        font-size: 15px;
+        font-size: 0.938rem;
         font-weight: 400;
-        line-height: 25px;
+        line-height: 1.563rem;
+
+
     }
 
     &__paragraph {
-        font-size: 30px;
+        font-size: 1.875rem;
         font-weight: 400;
-        line-height: 40px;
+        line-height: 2.5rem;
         margin-bottom: 25px;
+
     }
 }
