--- a/parcel/parcel/styles/photo__section.scss
+++ b/parcel/parcel/styles/photo__section.scss
@@ -2,31 +2,74 @@
     &__wraper {
         display: flex;
         padding: 100px 0;
+
+        @include desktop-xl {
+            flex-direction: column;
+            padding: 50px 0;
+        }
+
+        @include tablet-l {
+            padding: 25px 0;
+        }
+
+        @include desktop-m {
+            padding: 10px 0;
+        }
+
     }
 
     &__title {
-        font-size: 50px;
+        font-size: 3.125rem;
         font-weight: 600;
-        line-height: 60px;
+        line-height: 3.75rem;
+
+        @include desktop-xl {
+            line-height: 2.75rem;
+            font-size: 2.125rem;
+        }
+
+        @include tablet-l {
+            line-height: 1.9rem;
+            font-size: 1.5rem;
+        }
     }
 
     &__paragraph {
-        line-height: 30px;
+        line-height: 1.875;
         font-weight: 400;
-        font-size: 20px;
+        font-size: 1.25rem;
         margin: 30px 0 30px 0;
     }
 
     &__link {
-        line-height: 30px;
+        line-height: 1.875;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 
     &__article {
         padding: 100px 110px 100px 70px;
+        flex: 1;
 
+        @include desktop-xl {
+            max-width: 632px;
+            max-height: 632px;
+        }
 
+        @include tablet-l {
+            padding: 50px 50px 50px 30px;
+        }
+    }
+
+    &__img--block {
+        max-width: 632px;
+        max-height: 632px;
+        flex: 1;
+    }
+
+    &__img {
+        width: 100%;
+        object-fit: contain;
     }
 }
 
