--- a/parcel/parcel/styles/section.scss
+++ b/parcel/parcel/styles/section.scss
@@ -1,9 +1,17 @@
 .section {
     padding: 115px 0;
 
+    @include desktop-m {
+        padding: 25px 0;
+    }
+
+
     &__flax {
         display: flex;
 
+        @include desktop-xl {
+            flex-direction: column;
+        }
 
     }
 
@@ -15,26 +23,41 @@
 
 
 
+        @include desktop-m {
+            padding: 5px 0 5px 0;
+        }
+
     }
 
     &__title {
-        font-size: 65px;
+        font-size: 4.063rem;
         font-weight: 600;
-        line-height: 70px;
+        line-height: 4.375rem;
         margin-bottom: 51px;
+
+        @include desktop-xl {
+            line-height: 3rem;
+            font-size: 3rem;
+            margin-bottom: 25px;
+        }
+
+        @include tablet-l {
+            line-height: 2rem;
+            font-size: 2.15rem;
+        }
     }
 
     &__p {
-        font-size: 25px;
+        font-size: 1.563rem;
         font-weight: 400;
-        line-height: 35px;
+        line-height: 2.188rem;
         max-width: 450px;
     }
 
     &__text {
-        font-size: 15px;
+        font-size: 1.563rem;
         font-weight: 400;
-        line-height: 25px;
+        line-height: 2.188rem;
     }
 
     &__btn {
@@ -47,7 +70,12 @@
         padding: 90px 0 35px 0;
         max-width: 759px;
         max-height: 529px;
-        flex-shrink: 0;
+
+
+        @include desktop-m {
+            padding: 5px 0 5px 0;
+        }
+
 
     }
 
@@ -55,6 +83,7 @@
         // max-height: 130%;
         // max-width: 90%;
         object-fit: contain;
+        max-width: 100%;
     }
 
 }
