--- a/parcel/parcel/styles/brands.scss
+++ b/parcel/parcel/styles/brands.scss
@@ -38,13 +38,32 @@
         gap: 75px;
 
         @include desktop-xl {
+            gap: 5px;
+        }
+
+        @include desktop-m {
+            gap: 10px;
+
+        }
+
+        @include tablet-l {
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 105px;
         }
 
         @include tablet-m {
             flex-direction: column;
             align-items: center;
+            gap: 25px;
+        }
+    }
+
+    &__img {
+        object-fit: contain;
+        width: 100%;
+
+        @include tablet-m {
+            width: 150%;
 
         }
     }
