--- a/parcel/parcel/styles/localization.scss
+++ b/parcel/parcel/styles/localization.scss
@@ -1,12 +1,23 @@
 .localization {
     padding: 150px 0 120px 0;
 
+    @include desktop-m {
+        padding: 100px 0 80px 0;
+    }
+
+    @include tablet-l {
+        padding: 50px 0 40px 0;
+    }
+
+    @include tablet-m {
+        padding: 20px 0 10px 0;
+    }
 
     &__wraper {
         display: flex;
         gap: 30px;
 
-        @include desktop-m {
+        @include tablet-l {
             flex-direction: column;
             gap: 30px;
             align-items: center;
@@ -31,7 +42,6 @@
             font-size: 1.75rem;
             max-width: 500px;
             margin: 0 auto;
-
         }
     }
 
@@ -51,7 +61,6 @@
         font-size: 20px;
         font-weight: 400;
         line-height: 30px;
-        /* 150% */
         text-decoration-line: underline;
     }
 
